Add GCE Module. Launch toast from GCE Module library. GCE Module is not yet connected to Joke Library.

--- a/FinalProject/jokelibrary/src/main/AndroidManifest.xml
+++ b/FinalProject/jokelibrary/src/main/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.eric.jokelibrary">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name="com.example.eric.jokelibrary.JokeActivity"
+            android:name=".JokeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
