--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.google.android.gms:play-services-ads:9.8.0'
+    compile 'com.google.api-client:google-api-client:1.22.0'
+    compile 'com.google.http-client:google-http-client-android:1.22.0'
     compile project(':Jokes')
     compile project(':jokelibrary')
 }
