--- a/4.01-Demo-CreatingAJavaLibrary/gradle/wrapper/gradle-wrapper.properties
+++ b/4.01-Demo-CreatingAJavaLibrary/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Aug 17 09:06:24 PDT 2016
+#Mon Apr 10 16:20:29 EDT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.0-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
